[gd_scene load_steps=6 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="2_manager"]
[ext_resource type="PackedScene" uid="uid://launcher_scene" path="res://scenes/components/Launcher.tscn" id="3_launcher"]
[ext_resource type="PackedScene" uid="uid://flipper_scene" path="res://scenes/components/Flipper.tscn" id="4_flipper"]

[sub_resource type="RectangleShape2D" id="RectShape_wall"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectShape_background"]
size = Vector2(1152, 648)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_left = 0.0
offset_top = 0.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="PlayArea" type="ColorRect" parent="Background"]
offset_left = 50.0
offset_top = 50.0
offset_right = 1102.0
offset_bottom = 598.0
color = Color(0.15, 0.15, 0.25, 1)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_manager")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(1, 1)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(576, 0)
shape = SubResource("RectShape_wall")

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(576, 648)
shape = SubResource("RectShape_wall")

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 324)
rotation = 1.5708
shape = SubResource("RectShape_wall")

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2(1152, 324)
rotation = 1.5708
shape = SubResource("RectShape_wall")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Score: 0"

[node name="MultiplierLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "Multiplier: x1"

[node name="BallsLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0.3, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "Balls: 3"

[node name="Launcher" parent="." instance=ExtResource("3_launcher")]

[node name="LeftFlipper" parent="." instance=ExtResource("4_flipper")]
position = Vector2(200, 500)

[node name="RightFlipper" parent="." instance=ExtResource("4_flipper")]
position = Vector2(900, 500)
